<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="fragment"
            type="meet_eat.app.fragment.main.settings.SettingsDeleteProfileFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgFragment">

        <ImageButton
            android:id="@+id/ibtBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:elevation="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_back"
            android:tint="@color/bgButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description_back_button" />

        <TextView
            android:id="@+id/tvSettingsDeleteProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="5dp"
            android:shadowColor="@android:color/black"
            android:shadowRadius="10"
            android:text="@string/delete_profile"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/ibtBack"
            app:layout_constraintStart_toEndOf="@+id/ibtBack"
            app:layout_constraintTop_toTopOf="@+id/ibtBack" />

        <TextView
            android:id="@+id/tvSettingsDeleteProfileText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="5dp"
            android:shadowColor="@android:color/black"
            android:shadowRadius="10"
            android:text="@string/delete_profile_info"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibtBack" />

        <EditText
            android:id="@+id/etSettingsDeleteProfilePassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:autofillHints="password"
            android:background="@drawable/bg_edit_text"
            android:elevation="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@={fragment.password}"
            android:textColor="@android:color/white"
            android:textColorHint="@color/textHint"
            app:layout_constraintTop_toBottomOf="@+id/tvSettingsDeleteProfileText" />

        <Button
            android:id="@+id/btSettingsDeleteProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="@android:color/holo_red_light"
            android:elevation="5dp"
            android:text="@string/delete_profile"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>