...
    <string name="missing_date_time">Time cannot be empty.</string>
    <string name="sort_spinner_item_time">Time until meeting</string>
    <string name="invalid_date_time_past">Time specification lies is in the past.</string>
    <string name="date_time">Time</string>
    <string name="report_message">Why do you want to report the user or the offer?</string>
    <string name="publish">Publish</string>
    <string name="bad_password">Invalid password.</string>
    <string name="invalid_price">Invalid price indication.</string>
    <string name="bad_email">Invalid e-mail.</string>
    <string name="invalid_max_participants">Invalid number of participants.</string>
    <string name="bad_login">Invalid credentials.</string>
    <string name="date_format">DD.MM.YYYY</string>
    <string name="missing_title">Title must not be empty.</string>
...
    <string name="drawer_menu_profile">Profile</string>
    <string name="invalid_price_interval">Price interval invalid.</string>
    <string name="missing_price">Price must not be empty.</string>
    <string name="price">Price</string>
    <string name="sort_spinner_item_price">Price</string>
    <string name="reset_password">Forgot password?</string>
    <string name="invalid_password">Password incorrect.</string>
    <string name="password_changed">Password changed successfully.</string>
    <string name="password">Password</string>
    <string name="invalid_location">Location not found.</string>
    <string name="missing_location">Place must not be empty.</string>
    <string name="new_password">New password</string>
    <string name="delete_profile_info">Do you really want to delete your profile? Your information will be deleted and cannot be restored. Please confirm your request with your password.</string>
...
    <string name="toast_error_message">An error has occurred.</string>
    <string name="notification_hint">Receive a notification before each meeting you participate in.</string>
    <string name="invalid_distance_interval">Distance interval invalid.</string>
    <string name="distance">Distance</string>
    <string name="sort_spinner_item_distance">Distance</string>
    <string name="settings">Settings</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="about">Some buttons have been disabled and thus been grayed out. They are for presentation purposes only and represent functions that are not yet implemented.</string>
    <string name="dark">Dark</string>
    <string name="participating">You\'re already participating.</string>
    <string name="contact_text">A user asks for your contact details. Choose if you want to send him your contact details and if so, which ones.</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="missing_date">Date must not be empty.</string>
...
