...
            android:elevation="5dp"
            android:shadowColor="@android:color/black"
            android:shadowRadius="10"
            android:text="@string/about"
            android:visibility="invisible"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/btSettingsDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivSettingsInfo" />

        <ImageView
            android:id="@+id/ivSettingsInfo"
            android:layout_width="20dp"
...
