package meet_eat.app;

import android.os.SystemClock;
import android.view.Gravity;

import androidx.test.espresso.contrib.DrawerActions;
import androidx.test.espresso.contrib.NavigationViewActions;
import androidx.test.espresso.intent.Intents;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.rule.ActivityTestRule;

import org.junit.AfterClass;
import org.junit.BeforeClass;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.time.LocalDate;

import meet_eat.app.repository.RequestHandlerException;
import meet_eat.app.viewmodel.login.LoginViewModel;
import meet_eat.app.viewmodel.login.RegisterViewModel;
import meet_eat.app.viewmodel.main.SettingsViewModel;
import meet_eat.data.entity.user.Email;
import meet_eat.data.entity.user.Password;
import meet_eat.data.entity.user.User;
import meet_eat.data.location.Localizable;
import meet_eat.data.location.SphericalLocation;
import meet_eat.data.location.SphericalPosition;

import static androidx.test.espresso.Espresso.closeSoftKeyboard;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.contrib.DrawerMatchers.isClosed;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

@RunWith(AndroidJUnit4.class)
public class SettingsDeleteProfileFragmentTest {

    private static final LoginViewModel loginVM = new LoginViewModel();
    private static final RegisterViewModel registerVM = new RegisterViewModel();
    private static final SettingsViewModel settingsVM = new SettingsViewModel();
    private static final String password = "123##Test";
    private static final long timestamp = System.currentTimeMillis();

    private static final Localizable home = new SphericalLocation(new SphericalPosition(49.0082285, 8.3978892));

    @Rule
    public ActivityTestRule<SplashActivity> activityTestRule = new ActivityTestRule<>(SplashActivity.class);

    @BeforeClass
    public static void initialize() throws RequestHandlerException {
        User newUser = new User(new Email(timestamp + "@example.com"), Password.createHashedPassword(password),
                LocalDate.of(2000, 1, 1), "Tester", "0123456789", "Test description", true, home);
        registerVM.register(newUser);
        loginVM.login(timestamp + "@example.com", password);
        Intents.init();
    }

    @AfterClass
    public static void cleanUp() throws RequestHandlerException {
        Intents.release();
        settingsVM.deleteUser();
    }

    @Test
    public void deleteWithInvalidPasswordTest() {
        // Navigate to settings
        onView(withId(R.id.drawer_layout)).check(matches(isClosed(Gravity.LEFT))).perform(DrawerActions.open());
        onView(withId(R.id.nav_view)).perform(NavigationViewActions.navigateTo(R.id.drawer_menu_settings));

        // Wait, so espresso doesn't cause an error
        SystemClock.sleep(500);

        // Delete Profile
        onView(withId(R.id.btSettingsDelete)).perform(click());
        onView(withId(R.id.etSettingsDeleteProfilePassword)).perform(typeText("a"));
        closeSoftKeyboard();
        onView(withId(R.id.btSettingsDeleteProfile)).perform(click());
        onView(withText(R.string.bad_password)).inRoot(new ToastMatcher()).check(matches(isDisplayed()));
    }

    @Test
    public void deleteWithWrongPasswordTest() {
        // Navigate to settings
        onView(withId(R.id.drawer_layout)).check(matches(isClosed(Gravity.LEFT))).perform(DrawerActions.open());
        onView(withId(R.id.nav_view)).perform(NavigationViewActions.navigateTo(R.id.drawer_menu_settings));

        // Wait, so espresso doesn't cause an error
        SystemClock.sleep(500);

        // Delete Profile
        onView(withId(R.id.btSettingsDelete)).perform(click());
        onView(withId(R.id.etSettingsDeleteProfilePassword)).perform(typeText("123##TesterWrong"));
        closeSoftKeyboard();
        onView(withId(R.id.btSettingsDeleteProfile)).perform(click());
        onView(withText(R.string.invalid_password)).inRoot(new ToastMatcher()).check(matches(isDisplayed()));
    }

    @Test
    public void navigateBackTest() {
        // Navigate to settings
        onView(withId(R.id.drawer_layout)).check(matches(isClosed(Gravity.LEFT))).perform(DrawerActions.open());
        onView(withId(R.id.nav_view)).perform(NavigationViewActions.navigateTo(R.id.drawer_menu_settings));

        // Wait, so espresso doesn't cause an error
        SystemClock.sleep(500);

        onView(withId(R.id.btSettingsDelete)).perform(click());
        // Navigate back
        onView(withId(R.id.ibtBack)).perform(click());
    }
}